{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 32,
  "lineage": "0b6978e3-0ba8-20b9-95bd-3db59ec014b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113365400202:security-group/sg-04f7682cc8aa4bb2c",
            "description": "Security group for VPC endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f7682cc8aa4bb2c",
            "ingress": [],
            "name": "vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "113365400202",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0eef2b103dff32acc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113365400202:security-group/sg-05a28c4f85784b6a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a28c4f85784b6a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20231123164042678200000001",
            "name_prefix": "terraform-",
            "owner_id": "113365400202",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "cattleiq-sg"
            },
            "tags_all": {
              "Name": "cattleiq-sg"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0eef2b103dff32acc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cattleiq-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113365400202:subnet/subnet-073e68119f4e8e103",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073e68119f4e8e103",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113365400202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0eef2b103dff32acc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cattleiq-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113365400202:subnet/subnet-03770adf86d6b4ad2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03770adf86d6b4ad2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "113365400202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0eef2b103dff32acc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cattleiq-scraper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113365400202:vpc/vpc-0eef2b103dff32acc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2e09946e4d71343",
            "default_route_table_id": "rtb-0e2ae05ebb42c5109",
            "default_security_group_id": "sg-092d3eb8796c1d7e6",
            "dhcp_options_id": "dopt-26e79f5c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0eef2b103dff32acc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e2ae05ebb42c5109",
            "owner_id": "113365400202",
            "tags": {
              "Name": "cattleiq-scraper",
              "cattleiq-scraper": ""
            },
            "tags_all": {
              "Name": "cattleiq-scraper",
              "cattleiq-scraper": ""
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:113365400202:vpc-endpoint/vpce-0f6a026bfd0f131c2",
            "dns_entry": [
              {
                "dns_name": "vpce-0f6a026bfd0f131c2-mts4woj3.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f6a026bfd0f131c2-mts4woj3-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f6a026bfd0f131c2-mts4woj3-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09147522GCUR2OV4OMFJ"
              }
            ],
            "id": "vpce-0f6a026bfd0f131c2",
            "network_interface_ids": [
              "eni-046e0cf780c9060e3",
              "eni-0d9e67076df03670d"
            ],
            "owner_id": "113365400202",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-04f7682cc8aa4bb2c"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-048c9ebfde5f00b97",
              "subnet-07760298fa339ae95"
            ],
            "timeouts": {
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0eef2b103dff32acc"
          }
        }
      ]
    }
  ]
}